--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                             <svg class="clients-icon width="41" height="47" ">
+                             <svg class="clients-icon width="41" height="47">
                                  <use href="./images/sprite1.svg#icon-logo-one">
                                  </use>
                             </svg>
@@ -370,7 +370,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                            <svg class="clients-icon width="41" height="47" ">
+                            <svg class="clients-icon width="41" height="47">
                                 <use href=" ./images/sprite1.svg#icon-logo-two">
                                 </use>
                             </svg>
@@ -379,7 +379,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                            <svg class="clients-icon width="41" height="47" ">
+                            <svg class="clients-icon width="41" height="47">
                                 <use href=" ./images/sprite1.svg#icon-logo-three">
                                 </use>
                             </svg>
@@ -388,7 +388,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                            <svg class="clients-icon width="41" height="47" ">
+                            <svg class="clients-icon width="41" height="47">
                                 <use href=" ./images/sprite1.svg#icon-logo-four">
                                 </use>
                             </svg>
@@ -397,7 +397,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                            <svg class="clients-icon width="41" height="47" ">
+                            <svg class="clients-icon width="41" height="47">
                                 <use href=" ./images/sprite1.svg#icon-logo-five">
                                 </use>
                             </svg>
@@ -406,7 +406,7 @@
 
                     <li class="clients-item">
                         <a class="clients-link" href="">
-                            <svg class="clients-icon width="41" height="47" ">
+                            <svg class="clients-icon width="41" height="47">
                                 <use href=" ./images/sprite1.svg#icon-logo-six">
                                 </use>
                             </svg>
